# LinkedList

./: CMakeLists.txt  LICENSE  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
include/: lib.hpp
include/linked_list/: CMakeLists.txt  LinkedList.hpp  LinkedListConfig.h.in  Node.hpp  NodeConfig.h.in
source/: LinkedList.cpp  Node.cpp  main.cpp
source/tests/: ConstructorTest.cpp  tests.cpp
source/tests/LinkedListTests/: CharTest.cpp  ConstructorTest.cpp  DoubleTest.cpp  EraseTest.cpp  FloatTest.cpp  InsertTest.cpp  IteratorTest.cpp  LongDoubleTest.cpp  LongLongTest.cpp  LongTest.cpp  OperatorTest.cpp  StringTest.cpp
